Fix Preview Alignment Issue

--- a/frontend/src/app/editor/editor.css
+++ b/frontend/src/app/editor/editor.css
@@ -73,7 +73,7 @@
     height: 100%;
     padding: 0.6rem;
     background: var(--interactable-background);
-    ;
+    text-align: left;
     overflow-y: auto;
     word-wrap: break-word;
     overflow-wrap: break-word;
